--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bob",
+  "name": "editor-hub",
   "version": "1.0.0",
   "description": "Description of your library",
   "main": "dist/index.js",
