--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "parchment": "^1.1.4",
     "quill": "^2.0.0-dev.3",
+    "@ssumo/quill-resize-module": "^1.0.1",
     "resolve-url-loader": "^3.0.0",
     "sass": "^1.70.0",
     "sass-loader": "^7.1.0",
