feat: add watch script and configure watchOptions for development

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "module": "dist/index.esm.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --open --mode development"
+    "start": "webpack-dev-server --open --mode development",
+    "watch": "webpack --watch --mode development"
   },
   "repository": {
     "type": "git",
