Add babel config file and change main module to .js

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "editor-hub",
   "version": "1.0.4",
   "description": "Description of your library",
-  "main": "./src/core/dist/index.js",
+  "main": "./dist/index.js",
   "module": "./src/core/dist/index.esm.js",
   "scripts": {
     "build": "webpack --mode production",
