--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "editor-hub",
-  "version": "1.0.4",
+  "version": "1.0.0-stag",
   "description": "Description of your library",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
